@@ -174,7 +174,7 @@ check_info["mknotifyd"] = {
     "parse_function"      : parse_mknotifyd,
     "inventory_function"  : inventory_mknotifyd,
     "check_function"      : check_mknotifyd,
-    "service_description" : "Notification Spooler %s",
+    "service_description" : "OMD %s Notification Spooler",
 }
 
 
@@ -237,6 +237,6 @@ def check_mknotifyd_connection(item, _no_params, parsed):
 check_info["mknotifyd.connection"] = {
     "inventory_function"  : inventory_mknotifyd_connection,
     "check_function"      : check_mknotifyd_connection,
-    "service_description" : "Notification Connection %s",
+    "service_description" : "OMD %s Notify Connection",
 }
 
