@@ -1066,6 +1066,8 @@ register_configvar(group,
             ( "enterasys_temp",                   _("Enterasys Switch: Temperature")),
             ( "raritan_emx",                      _("Raritan EMX Rack: Temperature")),
             ( "raritan_pdu_inlet",                _("Raritan PDU: Input Phases")),
+            ( "mknotifyd",                        _("Notification Spooler")),
+            ( "mknotifyd.connection",             _("Notification Spooler Connection")),
         ],
         render_orientation = "vertical",
     ),
