@@ -394,6 +394,7 @@
     * 3802 FIX: Fixed excess Check Helper PIPEs when a datasource program runs into a timeout...
     * 3701 FIX: FIX ps.perf graph title for Memory and CPU Usage...
     * 3746 FIX: tinkerforge: Keep check from crashing in case of unconfigured params
+    * 3862 FIX: mknotifyd mknotifyd.connection: New service description (when enabled)...
 
     Multisite:
     * 3187 notification view: new filter for log command via regex
